force-app/main/default/objects/Lead/fields/Janati_RR__Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Round_Robin__c</fullName>
    <inlineHelpText>This field controls the calling of round robin on insert only.  The button Assign Round Robin works on reassignment, regardless of this setting.  Both methods call the Lead Assignment rule after Round Robin.</inlineHelpText>
    <label>Round Robin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>