force-app/main/default/objects/Lead/fields/Janati_RR__Round_Robin_Reassign__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Round_Robin_Reassign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Round Robin Reassign</label>
    <type>Checkbox</type>
</CustomField>