force-app/main/default/objects/Lead/fields/LeadOppScore__Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>LeadOppScore__Lead_Score__c</fullName>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>