force-app/main/default/objects/Lead/recordTypes/LeadRecType1.recordType-meta.xml
<RecordType>
    <fullName>LeadRecType1</fullName>
    <active>true</active>
    <businessProcess>LeadProcess1</businessProcess>
    <label>LeadRecType1</label>
</RecordType>