force-app/main/default/objects/Lead/recordTypes/RecType1.recordType-meta.xml
<RecordType>
    <fullName>RecType1</fullName>
    <active>true</active>
    <businessProcess>LeadProcess1</businessProcess>
    <label>RecType1</label>
</RecordType>